Removed MahList
Removed MahList class. Replaced usage with ArrayList.